# AoC

./: .gitignore
2024/: CMakeLists.txt  day01_01.cpp  day01_02.cpp  day02_01.cpp  day02_02.cpp  day03_01.cpp  day03_02.cpp  day04_01.cpp  day04_02.cpp  day05_01.cpp  day05_02.cpp  day06_01.cpp  day06_02.cpp  day07_01.cpp  day07_02.cpp  day08_01.cpp  day08_02.cpp  day09_01.cpp
