cmake_minimum_required(VERSION 3.28)
project(AoC)

set(CMAKE_CXX_STANDARD 23)

add_executable(AoC_day01_01 day01_01.cpp)
add_executable(AoC_day01_02 day01_02.cpp)
add_executable(AoC_day02_01 day02_01.cpp)
add_executable(AoC_day02_02 day02_02.cpp)
add_executable(AoC_day03_01 day03_01.cpp)
add_executable(AoC_day03_02 day03_02.cpp)
add_executable(AoC_day04_01 day04_01.cpp)
add_executable(AoC_day04_02 day04_02.cpp)
add_executable(AoC_day05_01 day05_01.cpp)
add_executable(AoC_day05_02 day05_02.cpp)
add_executable(AoC_day06_01 day06_01.cpp)
add_executable(AoC_day06_02 day06_02.cpp)
add_executable(AoC_day07_01 day07_01.cpp)
add_executable(AoC_day07_02 day07_02.cpp)
add_executable(AoC_day08_01 day08_01.cpp)
add_executable(AoC_day08_02 day08_02.cpp)
